// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Quote component Matches the snapshot 1`] = `
<DocumentFragment>
  <span
    class="ssb-quote"
  >
    «Quote»
  </span>
</DocumentFragment>
`;

exports[`Quote component Toggles classNames correctly 1`] = `
<DocumentFragment>
  <span
    class="ssb-quote negative"
  >
    «Quote»
  </span>
</DocumentFragment>
`;
